@@ -1,9 +1,9 @@
 # Generated by mksrcinfo v8
-# Thu Feb 15 15:40:23 UTC 2018
+# Fri Feb 16 18:27:01 UTC 2018
 pkgbase = return-to-the-roots-git
 	pkgdesc = Free/libre implementation of The Settlers II game engine
 	pkgver = r3863.e340f253
-	pkgrel = 2
+	pkgrel = 3
 	url = https://siedler25.org/
 	install = return-to-the-roots.install
 	changelog = ChangeLog
@@ -12,13 +12,15 @@ pkgbase = return-to-the-roots-git
 	makedepends = cmake
 	makedepends = git
 	makedepends = boost
+	makedepends = mesa
 	makedepends = sdl_mixer
 	makedepends = curl
 	makedepends = lua
 	makedepends = miniupnpc
+	depends = boost-libs
+	depends = libgl
 	depends = sdl_mixer
 	depends = miniupnpc
-	depends = boost-libs
 	provides = return-to-the-roots
 	conflicts = return-to-the-roots
 	conflicts = s25rttr
