@@ -1,3 +1,7 @@
+2018-02-16 Pierre Choffet <peuc@wanadoo.fr>
+	* r3863.e340f253-3 :
+	Add missing depends and makedepends
+
 2018-02-15 Pierre Choffet <peuc@wanadoo.fr>
 	* r3863.e340f253-2 :
 	Rename package to "return-to-the-roots-git" since it's not meant to build a
